--- a/css/style.css
+++ b/css/style.css
@@ -343,14 +343,26 @@ body{
 }
 
 
-
-@media  (max-width: 410px ){
+@media only screen and (max-width: 1000px){
     .photo55 {
         width: 150px;
         height: 150px;
+    }
 
+    .header-content{
+        padding-top: 219px;
     }
     .header-content_title{
         font-size: 150px;
     }
-}
+    .header-btn{
+        width: 130px;
+        height: 130px;
+        border: 4px solid #fff;
+    }
+    .header-btn div {
+        width: 70px;
+        height: 4px;
+        margin: 10px 0;
+    }
+  }
