--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,44 @@ body{
     position: relative;
 }
 
+@media only screen and (max-width: 1200px){
+    .adventes_text{
+        padding-left: 20px;
+    }
+}
+
+@media only screen and (max-width: 930px){
+    .adventes-inner_row{
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-bottom: 40px;
+    }
+
+    .adventes__title{
+        position: static;
+    }
+    .adventes-desk{
+        text-align: center;
+    }
+
+    .adventes_text{
+        margin: 25px auto;
+        padding-left: 0%;
+    }
+    .adventes_text ul {
+        margin-left: -24px;
+    }
+    .adventes_img_width{
+        max-width: 100%;
+    }
+
+    .adventes-inner_row--mobile .adventes-desk{
+        order: -1;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    
+}
 
 @media only screen and (max-width: 720px){
     .statistics-items{
@@ -349,6 +387,24 @@ body{
     } 
     .statistics-item__title{
         margin-top: 20px;
+    }
+    .video{
+        margin-bottom: 50px;
+    }
+
+    .desing-row{
+        display: block;
+    }
+    .desing-row__item{
+        max-width: 100%;
+        margin-bottom: 30px;
+    }
+    .desing-row__item__text{
+        max-width: 90%;
+    }
+    .design__images, .desing-row{
+        margin-bottom: 50px;
+        padding-bottom: 0;
     }
 }
 
@@ -366,5 +422,14 @@ body{
         line-height: 30px;
         padding: 22px 25px 14px 0;
         min-width: 227px;
+    }
+
+    body{
+        font-size: 20px;
+        line-height: 24px;
+    }
+
+    .adventes_text{
+        width: 100%;
     }
   }
